force-app/main/default/objects/Service_Type__c/Service_Type__c.object-meta.xml
<CustomObject>
    <description>SGPRT-263 - This object represents service classifications with are linked to User Teams, Entitlements and Client Service Tiers.</description>
    <label>Service Type</label>
    <nameField>
        <label>Service Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>