force-app/main/default/objects/Service_Type__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[JO - 6 September 2019] A flag to indicate whether a Service Type is active and can be selected.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>