force-app/main/default/objects/Service_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>SGPRT-263 - This field represents the category of service that is required.</description>
    <inlineHelpText>What category of service is required?</inlineHelpText>
    <label>Category</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>