force-app/main/default/objects/Service_Type__c/fields/CIB_Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>CIB_Service_Tier__c</fullName>
    <description>SGPRT-1375 - Lookup to global picklist to determine which CIB Clients this Service Type record can be used for.</description>
    <inlineHelpText>Defines the assigned client service level as per the client service model.</inlineHelpText>
    <label>CIB Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIB_Service_Tier</valueSetName>
    </valueSet>
</CustomField>