force-app/main/default/objects/Service_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>SGPRT-3552: Description of the service type</description>
    <inlineHelpText>Enter detail description of the service type</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>