force-app/main/default/objects/Service_Type__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SGPRT-263 - This field looks up to an Entitlement record.</description>
    <inlineHelpText>What entitlement is linked to this Service Type?</inlineHelpText>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Service Types</relationshipLabel>
    <relationshipName>Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>