force-app/main/default/objects/Service_Type__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>SGPRT-3552: Field to appear as secondary search result when searching on a lookup field</description>
    <inlineHelpText>Enter search criteria to appear as a secondary search result</inlineHelpText>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>