force-app/main/default/objects/Service_Type__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <description>SGPRT-2632- Type of service that is required</description>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Types</valueSetName>
    </valueSet>
</CustomField>