force-app/main/default/objects/Service_Type__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>SGPRT-263 - This field represents the sub category of service that is required.</description>
    <inlineHelpText>What sub category of service is required?</inlineHelpText>
    <label>Sub Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>