force-app/main/default/objects/Service_Type__c/fields/User_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Team__c</fullName>
    <description>SGPRT-263 - This field indicates which User Teams (User.UserTeam__c) can use this Service Type record.</description>
    <inlineHelpText>What team can use this Service Type?</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>