force-app/main/default/objects/Service_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <columns>Entitlement__c</columns>
    <columns>User_Team__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>