force-app/main/default/objects/Service_Type__c/listViews/Angola_CIB_Client_Service.listView-meta.xml
<ListView>
    <fullName>Angola_CIB_Client_Service</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>Africa Regions-Client Services-CIB-Client Service</value>
    </filters>
    <label>Angola CIB Client Service</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CIB_Customer_Contact_Centre_Angola_Division</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>