force-app/main/default/objects/Service_Type__c/listViews/Angola_Enterprise_Direct.listView-meta.xml
<ListView>
    <fullName>Angola_Enterprise_Direct</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>Africa Regions-Client Services-Enterprise Direct-Enterprise Direct</value>
    </filters>
    <label>Angola Enterprise Direct</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Enterprise_Direct_Customer_Contact_Centre_Angola_Division</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>