force-app/main/default/objects/Service_Type__c/listViews/Angola_PBB_Voice_Branch_Service_Types.listView-meta.xml
<ListView>
    <fullName>Angola_PBB_Voice_Branch_Service_Types</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <columns>Entitlement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>Africa Regions-Client Services-PBB-Voice Branch</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Angola PBB Voice Branch Service Types</label>
    <sharedTo>
        <roleAndSubordinates>PBB_Customer_Contact_Centre_Angola_Division</roleAndSubordinates>
    </sharedTo>
</ListView>