force-app/main/default/objects/Service_Type__c/listViews/Botswana_CST_IS_Service_Types.listView-meta.xml
<ListView>
    <fullName>Botswana_CST_IS_Service_Types</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <columns>Entitlement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>Africa Regions-Client Services-IS-CS-Botswana</value>
    </filters>
    <label>Botswana CST IS Service Types</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CIB_Customer_Contact_Center_IS_Botswana_Division</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>