force-app/main/default/objects/Service_Type__c/listViews/Kenya_CST_CIB_Service_Types.listView-meta.xml
<ListView>
    <fullName>Kenya_CST_CIB_Service_Types</fullName>
    <columns>NAME</columns>
    <columns>ServiceType__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>CIB_Service_Tier__c</columns>
    <columns>Entitlement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>Africa Regions-Client Services-CIB-CS-Kenya</value>
    </filters>
    <label>Kenya CST CIB Service Types</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CIB_Customer_Contact_Center_Kenya_Division</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>